fix techs color on mobile

--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -63,6 +63,7 @@
   .techs {
     padding-top: 90px;
     padding-bottom: 90px;
+    background: #202020;
   }
 
   .techs__title {
